# advent-of-code

./: .gitignore  Cargo.toml  README.md  flake.nix  zellij_layout.kdl
2015/: Cargo.toml
2015/src/: day1.rs
2022/: Cargo.toml
2022/src/: day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
2023/: Cargo.toml
2023/src/: day1.rs  day13.rs  day2.rs
2024/: Cargo.toml
2024/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
advent-of-code-2015/: Cargo.toml
advent-of-code-2015/src/: lib.rs  main.rs
advent-of-code-2015/src/day1/: mod.rs  puzzle2.rs
advent-of-code-2015/src/day2/: mod.rs  puzzle2.rs
advent-of-code-2015/src/day3/: mod.rs  puzzle2.rs
advent-of-code-2015/src/day4/: mod.rs  puzzles.rs
advent-of-code-2015/src/day5/: mod.rs  puzzle2.rs
advent-of-code-2021/: Cargo.toml
advent-of-code-2021/src/: lib.rs  main.rs
advent-of-code-2021/src/day1/: mod.rs  puzzle2.rs
advent-of-code-2021/src/day2/: mod.rs  puzzle1.rs  puzzle2.rs
advent-of-code-2021/src/day3/: mod.rs  puzzle1.rs
advent-of-code-2021/src/day4/: mod.rs  puzzle2.rs
advent-of-code-2021/src/day5/: puzzle2.rs
aoc2015/: Cargo.toml
aoc2015/src/: lib.rs  main.rs
aoc2015/src/day1/: main.rs  mod.rs  puzzle1.rs
aoc2015/src/day2/: main.rs  mod.rs  puzzle1.rs
aoc2015/src/day3/: main.rs  mod.rs  puzzle1.rs  puzzle2.rs
aoc2015/src/day4/: main.rs  puzzles.rs
aoc2015/src/day5/: main.rs  mod.rs  puzzle1.rs  puzzle2.rs
aoc2015/src/day6/: mod.rs
aoc2021/: Cargo.toml
aoc2021/src/: lib.rs  main.rs
aoc2021/src/day1/: main.rs  mod.rs  puzzle1.rs  puzzle2.rs
aoc2021/src/day10/: main.rs  mod.rs
aoc2021/src/day2/: main.rs  mod.rs
aoc2021/src/day3/: main.rs  mod.rs  puzzle2.rs
aoc2021/src/day4/: main.rs  mod.rs  puzzle1.rs
aoc2021/src/day5/: main.rs  mod.rs  puzzle1.rs  puzzle2.rs
aoc2021/src/day6/: main.rs  mod.rs  puzzle1.rs
aoc2021/src/day7/: main.rs  mod.rs  puzzle1.rs  puzzle2.rs
aoc2021/src/day8/: main.rs  mod.rs
aoc2021/src/day9/: main.rs  mod.rs  puzzle1.rs  puzzle2.rs
aoclib/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
day1/puzzle1_sonar_sweep/: Cargo.toml
day1/puzzle1_sonar_sweep/src/: lib.rs  main.rs
src/: common.rs  lib.rs  main.rs
src/day1/: mod.rs  puzzle1.rs  puzzle2.rs
src/day2/: mod.rs  puzzle1.rs
