[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[dependencies]
anyhow = "1.0.65"
advent-of-code-common = {path = "../common"}
rayon = "1.6.0"
