[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/day1/main.rs"
name = "day1"

[[bin]]
path = "src/day2/main.rs"
name = "day2"

[[bin]]
path = "src/day3/main.rs"
name = "day3"

[[bin]]
path = "src/day4/main.rs"
name = "day4"

[[bin]]
path = "src/day5/main.rs"
name = "day5"

[[bin]]
path = "src/day6/main.rs"
name = "day6"

[dependencies]
aoclib = { path = "../aoclib" }
fancy-regex = "0.7.1"
md5 = "0.7.0"
unicode-segmentation = "1.8.0"

[features]
