[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/day1/main.rs"
name = "day1"

[[bin]]
path = "src/day2/main.rs"
name = "day2"

[[bin]]
path = "src/day3/main.rs"
name = "day3"

[[bin]]
path = "src/day4/main.rs"
name = "day4"

[[bin]]
path = "src/day5/main.rs"
name = "day5"

[[bin]]
path = "src/day6/main.rs"
name = "day6"

[[bin]]
path = "src/day7/main.rs"
name = "day7"

[[bin]]
path = "src/day8/main.rs"
name = "day8"

[[bin]]
path = "src/day9/main.rs"
name = "day9"

[[bin]]
path = "src/day10/main.rs"
name = "day10"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoclib = { path = "../aoclib" }
md5 = "0.7.0"
unicode-segmentation = "1.8.0"

[features]
